src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  /* #region  /**=========== Colors =========== */
  --color-primary: 17 20 45; /* #11142d */
  --color-secondary: 108 93 211; /* #6C5DD3 */
  --color-focus: rgb(59 130 246 / 0.5); /* #3b82f680 */
  --tw-color-primary-50: 245 243 255;
  --tw-color-primary-100: 237 233 254;
  --tw-color-primary-200: 221 214 254;
  --tw-color-primary-300: 196 181 253;
  --tw-color-primary-400: 167 139 250;
  --tw-color-primary-500: 139 92 246;
  --tw-color-primary-600: 124 58 237;
  --tw-color-primary-700: 109 40 217;
  --tw-color-primary-800: 91 33 182;
  --tw-color-primary-900: 76 29 149;
  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f5f3ff */
  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #ede9fe */
  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #ddd6fe */
  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #c4b5fd */
  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #a78bfa */
  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #8b5cf6 */
  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #7c3aed */
  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #6d28d9 */
  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #5b21b6 */
  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #4c1d95 */
  /* #endregion  /**======== Colors =========== */
}

@layer base {
  /* inter var - latin */
  @font-face {
    font-family: 'Inter';
    font-style: normal;
    font-weight: 100 900;
    font-display: fallback;
    src: url('/fonts/inter-var-latin.woff2') format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
      U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  }

  html {
    box-sizing: border-box;
    touch-action: manipulation;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  html,
  body,
  #__next {
    @apply h-full;
  }

  a {
    @apply ring-offset-1 focus:outline-none focus-visible:ring-2 focus-visible:ring-opacity-75;
  }

  /* #region  /**=========== Typography =========== */
  .h0 {
    @apply font-primary text-3xl font-bold md:text-5xl;
  }

  h1,
  .h1 {
    @apply font-primary text-2xl font-bold md:text-4xl;
  }

  h2,
  .h2 {
    @apply font-primary text-xl font-bold md:text-3xl;
  }

  h3,
  .h3 {
    @apply font-primary text-lg font-bold md:text-2xl;
  }

  h4,
  .h4 {
    @apply font-primary text-base font-bold md:text-lg;
  }

  body,
  .p {
    @apply font-primary text-sm md:text-base;
  }
  /* #endregion  /**======== Typography =========== */

  .prose :where(ul > li):not(:where([class~='not-prose'] *))::marker {
    @apply !text-slate-400/60;
  }

  .layout {
    /* 1280px */
    @apply mx-auto w-11/12 max-w-7xl;
  }

  .bg-dark a.custom-link {
    @apply border-gray-200 hover:border-gray-200/0;
  }

  /* Class to adjust with sticky footer */
  .min-h-main {
    @apply min-h-[calc(100vh-56px)];
  }
}

@layer utilities {
  .animated-underline {
    background-image: linear-gradient(#33333300, #33333300),
      linear-gradient(to right, rgb(var(--color-secondary)), rgb(var(--color-secondary)));
    background-size: 100% 2px, 0 2px;
    background-position: 100% 100%, 0 100%;
    background-repeat: no-repeat;
  }
  @media (prefers-reduced-motion: no-preference) {
    .animated-underline {
      transition: 0.3s ease;
      transition-property: background-size, color, background-color, border-color;
    }
  }
  .animated-underline:hover,
  .animated-underline:focus-visible {
    background-size: 0 2px, 100% 2px;
  }
}

